# four-in-a-row

./: configure.ac
src/: Makefile.am  ai.vala  compare.vala  main.c  playgame.h  playgame.vala  test-ai.vala
